$Id: CHANGES,v 1.22 2003/03/08 16:03:44 psavola Exp $

03/08/2003	Add patch from MAEDA Naoaki <maeda.naoaki@jp.fujitsu.com>
		to discard RS's from the unspecied source address with
		link-layer address option, as required by RFC2461.

10/28/2002	Release 0.7.2:
		 - add support for VLANs (from USAGI)
		 - make it compile better on newer NetBSD's (NetBSD)
		 - fix a syntax error in radvd.conf(5) sample documentation
		 - use IPV6_RECV{HOPLIMIT,PKTINFO} not 
                       IPV6_{HOPLIMIT,PKTINFO} if supported
		 - (in Red Hat spec file) don't create radvd gid explicitly
		 - a lot of coding style cleanups

01/16/2002	Release 0.7.1.

01/12/2002	Update config.{guess,sub} from ftp.gnu.org; update INTRO.
		Marko Myllynen and Debian bug #115992.

01/02/2002	Ensure NULL-termination with strncpy.

12/31/2001	Radvdump fixes: eliminate a warning of Prefix Information
		sections with '-d -f'; add a note that
		{Min,Max}RtrAdvInterval cannot be obtained with '-f';
		implement '-e' to be used with '-f' which omits all
		advertised default settings. Mostly by Marko Myllynen.

12/28/2001	Small cleanups.  AdvSendAdvert is implicitly off by
		default.  Check configuration file permissions; must
		not be writable by others, and if non-root,
		not by self/own group.  By Marko Myllynen.

12/21/2001	Check via sysctl that IPv6 forwarding is enabled;
		exit unless debugging is enabled.  Triggered by
		Marko Myllynen.

11/22/2001	MinRtrAdvInterval for MIPv6 is 0.05 seconds, not 0.5.
		(Note: untested).

11/20/2001	Rework BSD device memory management a bit, minor cleanups.
		Version bumped to 0.7.0.

11/14/2001	Maintainership of radvd transferred from Lars Fenneberg
		to Pekka Savola and Nathan Lutchansky.  Lars' CVS
		repository adopted, and changes merged from the -pX
		branch.

08/29/2001	Minor change for NetBSD 1.5.1 compatibility.
		(Nathan Lutchansky)

07/20/2001	Support for non-multicast links, like ISATAP.
		(Nathan Lutchansky)
